[ADD+UPDATE] custom user auth added + typeorm to prisma.

--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,6 @@
 PORT=3000
-DB_PORT=3306
-DB_HOST="localhost"
-DB_TYPE="mysql"
-DB_USERNAME="root"
-DB_PASSWORD="password"
-DB_DATABASE="muse"
-DB_LOGGING=false
-DB_SYNCHRONIZE=true
+DATABASE_URL="postgresql://root:root@localhost:5432/muse"
+TOKEN_SECRET="eEZhQmxKRUZZdTJtOTVITg$I6j+S4BZVy0h60TJPRS9vw"
+TOKEN_EXIPIRATION_DATE="1d"
+REFRESH_TOKEN_SECRET="eEDSCDQmxKRUZASC4tOTVITSD@$I6j+S4BZVy0h60TJP5449vw"
+REFRESH_TOKEN_EXIPIRATION_DATE="30d"
