--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
-  "name": "express-boilerplate",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev ./src",
-    "build": "tsc",
-    "start": "NODE_ENV=production node ./dist"
-  },
-  "dependencies": {
-    "argon2": "^0.30.3",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.9.1",
-    "typeorm": "^0.3.15",
-    "uuid": "^9.0.0",
-    "yup": "^1.1.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.15.11",
-    "@types/uuid": "^9.0.1",
-    "ts-node-dev": "^2.0.0",
-    "tsc": "^2.0.4",
-    "typescript": "^5.0.4"
-  }
+	"name": "express-boilerplate",
+	"version": "1.0.0",
+	"license": "MIT",
+	"scripts": {
+		"dev": "NODE_ENV=development ts-node-dev ./src",
+		"build": "tsc",
+		"start": "NODE_ENV=production node ./dist",
+		"migrate:dev": "dotenv -e .env.development -- yarn prisma migrate deploy",
+		"push:dev": "dotenv -e .env.development -- yarn prisma db push",
+		"generate:dev": "dotenv -e .env.development -- yarn prisma generate",
+		"studio:dev": "dotenv -e .env.development -- yarn prisma studio"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.13.0",
+		"argon2": "^0.30.3",
+		"colors": "^1.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"dotenv-cli": "^7.2.1",
+		"express": "^4.18.2",
+		"express-async-errors": "^3.1.1",
+		"jsonwebtoken": "^9.0.0",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
+		"uuid": "^9.0.0",
+		"yup": "^1.1.1"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.1",
+		"@types/node": "^18.15.11",
+		"@types/uuid": "^9.0.1",
+		"add": "^2.0.6",
+		"prisma": "^4.13.0",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
+		"tsc": "^2.0.4",
+		"typescript": "^5.0.4"
+	}
 }
