[FIX] routes tested and fixed.

--- a/.env
+++ b/.env
@@ -1,13 +1,7 @@
-PORT=3000
-TOKEN_SECRET="eEZhQmxKRUZZdTJtOTVITg$I6j+S4BZVy0h60TJPRS9vw"
-TOKEN_EXIPIRATION_DATE="1d"
-REFRESH_TOKEN_SECRET="eEDSCDQmxKRUZASC4tOTVITSD@$I6j+S4BZVy0h60TJP5449vw"
-REFRESH_TOKEN_EXIPIRATION_DATE="30d"
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# PORT=3000
+# TOKEN_SECRET="eEZhQmxKRUZZdTJtOTVITg$I6j+S4BZVy0h60TJPRS9vw"
+# TOKEN_EXIPIRATION_DATE="1d"
+# REFRESH_TOKEN_SECRET="eEDSCDQmxKRUZASC4tOTVITSD@$I6j+S4BZVy0h60TJP5449vw"
+# REFRESH_TOKEN_EXIPIRATION_DATE="30d"
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# YOUTUBE_API_SECRET_KEY=""
