--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 PORT=3000
-DATABASE_URL="postgresql://root:root@localhost:5432/muse"
-TOKEN_SECRET="eEZhQmxKRUZZdTJtOTVITg$I6j+S4BZVy0h60TJPRS9vw"
-TOKEN_EXIPIRATION_DATE="1d"
-REFRESH_TOKEN_SECRET="eEDSCDQmxKRUZASC4tOTVITSD@$I6j+S4BZVy0h60TJP5449vw"
-REFRESH_TOKEN_EXIPIRATION_DATE="30d"
+YOUTUBE_API_KEY='AIzaSyBfnMMbdYFFGzR3MyN21nHBEFSMPQ9E-U4'
+DATABASE_URL='postgresql://root:root@localhost:5432/muse'
+TOKEN_SECRET='eEZhQmxKRUZZdTJtOTVITg$I6j+S4BZVy0h60TJPRS9vw'
+TOKEN_EXIPIRATION_DATE='1d'
+REFRESH_TOKEN_SECRET='eEDSCDQmxKRUZASC4tOTVITSD@$I6j+S4BZVy0h60TJP5449vw'
+REFRESH_TOKEN_EXIPIRATION_DATE='30d'
