--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@prisma/client": "^4.13.0",
 		"argon2": "^0.30.3",
+		"axios": "^1.3.6",
 		"colors": "^1.4.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
